Rich text editor : fix ordered list when shifting text on the right (#5476)

--- a/ui/main/src/scss/styles.scss
+++ b/ui/main/src/scss/styles.scss
@@ -707,110 +707,6 @@ tag-input {
     border-radius: 3px;
 }
 
-.ql-align-center {
-    text-align: center;
-}
-
-
-ul {
-    li.ql-align-right::before {
-        content: '\2022';
-    }
-
-    li.ql-align-center {
-        list-style: none;
-    }
-
-    li.ql-align-right {
-        list-style: none;
-    }
-
-    li.ql-align-center::before {
-        content: '\2022';
-    }
-}
-
-
-
-.ql-align-right {
-    text-align: right;
-}
-
-.ql-align-left {
-    text-align: left;
-}
-
-.ql-align-justify {
-    text-align: justify;
-}
-
-.ql-indent-1 {
-    margin-left: 25px;
-}
-
-ol {
-    li.ql-indent-1 {
-        list-style-type: lower-latin;
-    }
-
-    li.ql-indent-2 {
-        list-style-type: lower-roman;
-    }
-
-    li.ql-indent-3 {
-        list-style-type: decimal;
-    }
-
-    li.ql-indent-4 {
-        list-style-type: lower-latin;
-    }
-
-    li.ql-indent-5 {
-        list-style-type: lower-roman;
-    }
-
-    li.ql-indent-6 {
-        list-style-type: decimal;
-    }
-
-    li.ql-indent-7 {
-        list-style-type: lower-latin;
-    }
-
-    li.ql-indent-8 {
-        list-style-type: lower-roman;
-    }
-}
-
-.ql-indent-2 {
-    margin-left: 50px;
-}
-
-.ql-indent-3 {
-    margin-left: 150px;
-}
-
-.ql-indent-4 {
-    margin-left: 200px;
-}
-
-.ql-indent-5 {
-    margin-left: 250px;
-}
-
-.ql-indent-6 {
-    margin-left: 300px;
-}
-
-.ql-indent-7 {
-    margin-left: 350px;
-}
-
-.ql-indent-8 {
-    margin-left: 400px;
-}
-
-
 // END QUILLJS STYLE
 
 // QUILLJS TRANSLATION: quill.js labels are defined inside css.
